cmake_minimum_required(VERSION 3.28)
project(Combinatorial_Mathematics)

set(CMAKE_CXX_STANDARD 14)

add_executable(A1 hwA/A1.cpp)
add_executable(A2 hwA/A2.cpp)
add_executable(A3 hwA/A3.cpp)

add_executable(B1 hwB/B1.cpp)
add_executable(B2 hwB/B2.cpp)
add_executable(C1 hwC/C1.cpp)
add_executable(C3 hwC/C3.cpp)
add_executable(C4 hwC/C4.cpp)
add_executable(D1 hwD/D1.cpp)
add_executable(D2 hwD/D2.cpp)
add_executable(D3 hwD/D3.cpp)